--- a/src/Web/BackendBundle/Resources/views/Home/index/create.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Home/index/create.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-4 col-lg-4">
         <!-- create new clients -->
-        <a href="{{ url('web_contact_home') }}" class="widget widget-hover-effect1">
+        <a href="{{ url('contact_list') }}" class="widget widget-hover-effect1">
             <div class="widget-simple">
                 <div class="widget-icon pull-left themed-background-autumn animation-fadeIn">
                     <i class="fa fa-file-text"></i>
