--- a/src/Web/BackendBundle/Resources/views/Layouts/layouts.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Layouts/layouts.html.twig
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>ProUI - Responsive Bootstrap Admin Template</title>
+    <title>MakotoOffice</title>
 
     <meta name="description" content="ProUI is a Responsive Bootstrap Admin Template created by pixelcave and published on Themeforest.">
     <meta name="author" content="pixelcave">
@@ -40,6 +40,10 @@
     <!-- The themes stylesheet of this template (for using specific theme color in individual elements - must included last) -->
     <link rel="stylesheet" href="{{ asset('backend/css/themes.css') }}">
     <!-- END Stylesheets -->
+
+    <!-- Fontawesome 4.2 -->
+    <link rel="stylesheet" href="{{ asset('font-awesome-4.2.0/css/font-awesome.min.css') }}">
+    <!-- END Fontawesome -->
 
     <script src="{{ asset('jquery-1.11.1.min.js') }}"></script>
     <!-- Modernizr (browser feature detection library) & Respond.js (Enable responsive CSS code on browsers that don't support it, eg IE8) -->
