add sharing files module

--- a/src/Web/BackendBundle/Resources/views/Home/index/create.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Home/index/create.html.twig
@@ -47,14 +47,14 @@
     </div>
     <div class="col-sm-4 col-lg-4">
         <!-- Widget -->
-        <a href="page_comp_gallery.html" class="widget widget-hover-effect1">
+        <a href="{{ url('sharing_home') }}" class="widget widget-hover-effect1">
             <div class="widget-simple">
                 <div class="widget-icon pull-left themed-background-amethyst animation-fadeIn">
-                    <i class="gi gi-picture"></i>
+                    <i class="gi gi-file"></i>
                 </div>
                 <h3 class="widget-content text-right animation-pullDown">
-                    +30 <strong>Photos</strong>
-                    <small>Gallery</small>
+                     <strong>Sharing File</strong>
+                    <small>Something looks like dropbox</small>
                 </h3>
             </div>
         </a>
