--- a/src/Web/BackendBundle/Resources/views/Form/form_div_layouts.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Form/form_div_layouts.html.twig
@@ -175,6 +175,15 @@
     {{- block('form_widget_simple') -}}
 {%- endblock email_widget %}
 
+{% block file_widget %}
+    {% spaceless %}
+        {% set type = type|default('file') %}
+
+            <input type="{{ type }}" {{ block('widget_attributes') }} />
+
+    {% endspaceless %}
+{% endblock file_widget %}
+
 {% block button_widget -%}
     {% if label is empty -%}
         {% set label = name|humanize %}
