--- a/src/Web/BackendBundle/Resources/views/Form/form_div_layouts.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Form/form_div_layouts.html.twig
@@ -10,7 +10,10 @@
 
 {% block form_widget_simple -%}
     {% set type = type|default('text') -%}
-    <input type="{{ type }}" class="form-control" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
+
+    <input type="{{ type }}" class="form-control {% if attr['class'] is defined %}{{ attr['class'] }}{% endif %}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
+
+
 {%- endblock form_widget_simple %}
 
 {% block form_widget_compound -%}
@@ -93,41 +96,21 @@
 {%- endblock radio_widget %}
 
 {% block datetime_widget -%}
-    {% if widget == 'single_text' %}
+
         {{- block('form_widget_simple') -}}
-    {% else %}
-        <div {{ block('widget_container_attributes') }}>
-            {{- form_errors(form.date) -}}
-            {{- form_errors(form.time) -}}
-            {{- form_widget(form.date) -}}
-            {{- form_widget(form.time) -}}
-        </div>
-    {% endif %}
+
 {%- endblock datetime_widget %}
 
 {% block date_widget -%}
-    {% if widget == 'single_text' %}
+
         {{- block('form_widget_simple') -}}
-    {% else -%}
-        <div {{ block('widget_container_attributes') }}>
-            {{- date_pattern|replace({
-            '{{ year }}':  form_widget(form.year),
-            '{{ month }}': form_widget(form.month),
-            '{{ day }}':   form_widget(form.day),
-            })|raw -}}
-        </div>
-    {%- endif %}
+
 {%- endblock date_widget %}
 
 {% block time_widget -%}
-    {% if widget == 'single_text' %}
+
         {{- block('form_widget_simple') -}}
-    {% else -%}
-        {% set vars = widget == 'text' ? { 'attr': { 'size': 1 }} : {} %}
-        <div {{ block('widget_container_attributes') }}>
-        {{ form_widget(form.hour, vars) }}{% if with_minutes %}:{{ form_widget(form.minute, vars) }}{% endif %}{% if with_seconds %}:{{ form_widget(form.second, vars) }}{% endif %}
-    </div>
-    {%- endif %}
+
 {%- endblock time_widget %}
 
 {% block number_widget -%}
