--- a/src/Web/BackendBundle/Resources/views/User/contract/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/User/contract/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "WebBackendBundle:Layouts:layouts.html.twig" %}
 
 {% block icon %}fa fa-home{% endblock %}
-{% block bigTitle %}{{ 'backend.user.contract.bigTile' | trans | raw }}{% endblock %}
+{% block bigTitle %}{{ 'backend.user.contract.bigTitle' | trans | raw }}{% endblock %}
 {% block bigDescription %}{{ 'backend.user.contract.bigDescription' | trans | raw }}{% endblock %}
 {% block topName %}{{ 'backend.crumbs.user.contract' | trans | raw }}{% endblock %}
 {% block subName %}{% endblock %}
