--- a/src/Web/BackendBundle/Resources/views/User/index/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/User/index/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "WebBackendBundle:Layouts:layouts.html.twig" %}
 
 {% block icon %}fa fa-home{% endblock %}
-{% block bigTitle %}{{ 'backend.user.document.bigTile' | trans | raw }}{% endblock %}
+{% block bigTitle %}{{ 'backend.user.document.bigTitle' | trans | raw }}{% endblock %}
 {% block bigDescription %}{{ 'backend.user.document.bigDescription' | trans | raw }}{% endblock %}
 {% block topName %}{{ 'backend.crumbs.user.document' | trans | raw }}{% endblock %}
 {% block subName %}{% endblock %}
