--- a/src/Web/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/Web/FrontendBundle/Resources/views/Default/index.html.twig
@@ -1,3 +1,5 @@
 
 
 Hello {{ name }}!
+
+<input type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput" class="sign_file" />
