--- a/src/Web/BackendBundle/Resources/views/Company/index/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Company/index/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "WebBackendBundle:Layouts:layouts.html.twig" %}
 
 {% block icon %}fa fa-home{% endblock %}
-{% block bigTitle %}{{ 'backend.company.bigTile' | trans | raw }}{% endblock %}
+{% block bigTitle %}{{ 'backend.company.bigTitle' | trans | raw }}{% endblock %}
 {% block bigDescription %}{{ 'backend.company.bigDescription' | trans | raw }}{% endblock %}
 {% block topName %}{{ 'backend.crumbs.company' | trans | raw }}{% endblock %}
 {% block subName %}{% endblock %}
