--- a/src/Web/BackendBundle/Resources/views/Contact/view/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Contact/view/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "WebBackendBundle:Layouts:layouts.html.twig" %}
 
 {% block icon %}fa fa-home{% endblock %}
-{% block bigTitle %}{{ 'backend.contact.bigTile' | trans | raw }}{% endblock %}
+{% block bigTitle %}{{ 'backend.contact.bigTitle' | trans | raw }}{% endblock %}
 {% block bigDescription %}{{ 'backend.contact.bigDescription' | trans | raw }}{% endblock %}
 {% block topName %}{{ 'backend.crumbs.contact' | trans | raw }}{% endblock %}
 {% block subName %}{% endblock %}
