--- a/src/Web/BackendBundle/Resources/views/User/index/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/User/index/index.html.twig
@@ -9,7 +9,13 @@
 
     <div class="row">
 
-        <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="block">
+                {% include "WebBackendBundle:User:index/avatar.html.twig" %}
+            </div>
+        </div>
+
+        <div class="col-md-8">
             <div class="block">
 
                 <div class="block-title">
