--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -60,10 +60,9 @@
 
                 <!-- Key Features -->
                 <ul class="fa-ul text-muted">
-                    <li><i class="fa fa-check fa-li text-success"></i> Clean &amp; Modern Design</li>
-                    <li><i class="fa fa-check fa-li text-success"></i> Video Link</li>
-
-                    <li><i class="fa fa-check fa-li text-success"></i> .. and many more awesome features!</li>
+                    <li><i class="fa fa-check fa-li text-success"></i> Here is an anonymous account to share files:</li>
+                    <li><i class="fa fa-check fa-li text-success"></i> Username: makoto</li>
+                    <li><i class="fa fa-check fa-li text-success"></i> Password: makoto</li>
                 </ul>
                 <!-- END Key Features -->
 
