--- a/src/Web/BackendBundle/Resources/views/Blocks/main_sidebar.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Blocks/main_sidebar.html.twig
@@ -4,7 +4,7 @@
 <!-- Sidebar Content -->
 <div class="sidebar-content">
 <!-- Brand -->
-<a href="index.html" class="sidebar-brand">
+<a href="{{ url('web_backend_homepage') }}" class="sidebar-brand">
     <i class="gi gi-flash"></i><strong>Makoto</strong>Office
 </a>
 <!-- END Brand -->
@@ -18,45 +18,16 @@
     </div>
     <div class="sidebar-user-name">{{ app.user.username }}</div>
     <div class="sidebar-user-links">
-        <a href="page_ready_user_profile.html" data-toggle="tooltip" data-placement="bottom" title="Profile"><i class="gi gi-user"></i></a>
-        <a href="page_ready_inbox.html" data-toggle="tooltip" data-placement="bottom" title="Messages"><i class="gi gi-envelope"></i></a>
-        <!-- Opens the user settings modal that can be found at the bottom of each page (page_footer.html in PHP version) -->
-        <a href="#modal-user-settings" data-toggle="modal" class="enable-tooltip" data-placement="bottom" title="Settings"><i class="gi gi-cogwheel"></i></a>
-        <a href="login.html" data-toggle="tooltip" data-placement="bottom" title="Logout"><i class="gi gi-exit"></i></a>
+        <a href="{{ url('fos_user_security_logout') }}" data-toggle="tooltip" data-placement="bottom" title="Logout"><i class="gi gi-exit"></i></a>
     </div>
 </div>
 <!-- END User Info -->
 
 <!-- Sidebar Navigation -->
-    {{ knp_menu_render('WebBackendBundle:Builder:mainMenu') }}
+    {#{{ knp_menu_render('WebBackendBundle:Builder:mainMenu') }}#}
+    {{ knp_menu_render('main') }}
 <!-- END Sidebar Navigation -->
 
-<!-- Sidebar Notifications -->
-<div class="sidebar-header">
-    <span class="sidebar-header-options clearfix">
-        <a href="javascript:void(0)" data-toggle="tooltip" title="Refresh"><i class="gi gi-refresh"></i></a>
-    </span>
-    <span class="sidebar-header-title">Activity</span>
-</div>
-<div class="sidebar-section">
-    <div class="alert alert-success alert-alt">
-        <small>5 min ago</small><br>
-        <i class="fa fa-thumbs-up fa-fw"></i> You had a new sale ($10)
-    </div>
-    <div class="alert alert-info alert-alt">
-        <small>10 min ago</small><br>
-        <i class="fa fa-arrow-up fa-fw"></i> Upgraded to Pro plan
-    </div>
-    <div class="alert alert-warning alert-alt">
-        <small>3 hours ago</small><br>
-        <i class="fa fa-exclamation fa-fw"></i> Running low on space<br><strong>18GB in use</strong> 2GB left
-    </div>
-    <div class="alert alert-danger alert-alt">
-        <small>Yesterday</small><br>
-        <i class="fa fa-bug fa-fw"></i> <a href="#"><strong>New bug submitted</strong></a>
-    </div>
-</div>
-<!-- END Sidebar Notifications -->
 </div>
 <!-- END Sidebar Content -->
 </div>
