--- a/src/Web/BackendBundle/Resources/views/Home/index/create.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Home/index/create.html.twig
@@ -1,4 +1,5 @@
 <div class="row">
+    {% if is_granted('ROLE_ADMIN') %}
     <div class="col-sm-4 col-lg-4">
         <!-- create new clients -->
         <a href="{{ url('contact_list') }}" class="widget widget-hover-effect1">
@@ -14,7 +15,9 @@
         </a>
         <!-- END -->
     </div>
+    {% endif %}
 
+    {% if is_granted('ROLE_ADMIN') %}
     <div class="col-sm-4 col-lg-4">
         <!-- Widget -->
         <a href="{{ url('web_company_home') }}" class="widget widget-hover-effect1">
@@ -30,9 +33,12 @@
         </a>
         <!-- END Widget -->
     </div>
+    {% endif %}
+
+    {% if is_granted('ROLE_ADMIN') %}
     <div class="col-sm-4 col-lg-4">
         <!-- Widget -->
-        <a href="page_ready_inbox.html" class="widget widget-hover-effect1">
+        <a href="#" class="widget widget-hover-effect1">
             <div class="widget-simple">
                 <div class="widget-icon pull-left themed-background-fire animation-fadeIn">
                     <i class="gi gi-envelope"></i>
@@ -45,6 +51,9 @@
         </a>
         <!-- END Widget -->
     </div>
+    {% endif %}
+
+
     <div class="col-sm-4 col-lg-4">
         <!-- Widget -->
         <a href="{{ url('sharing_home') }}" class="widget widget-hover-effect1">
