--- a/src/Web/BackendBundle/Resources/views/Home/index/invoice.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Home/index/invoice.html.twig
@@ -1,4 +1,5 @@
 <div class="row">
+    {% if is_granted('ROLE_ADMIN') %}
     <div class="col-sm-4 col-lg-4">
         <!-- create new clients -->
         <a href="page_ready_article.html" class="widget widget-hover-effect1">
@@ -14,4 +15,5 @@
         </a>
         <!-- END -->
     </div>
+    {% endif %}
 </div>
