--- a/src/Web/BackendBundle/Resources/views/Home/index/list.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Home/index/list.html.twig
@@ -1,5 +1,5 @@
-
 <div class="row">
+    {% if is_granted('ROLE_ADMIN') %}
     <div class="col-sm-4 col-lg-4">
         <!-- create new clients -->
         <a href="{{ url('contact_list') }}" class="widget widget-hover-effect1">
@@ -15,4 +15,5 @@
         </a>
         <!-- END -->
     </div>
+    {% endif %}
 </div>
