--- a/src/Web/BackendBundle/Resources/views/Invoice/create/index_content.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Invoice/create/index_content.html.twig
@@ -1,3 +1,4 @@
+
 <div align="center">
     <h2>
     {% if app.user.document %}{{ app.user.document.chineseName }}{% else %}{{ app.user.username }}{% endif %}
@@ -19,7 +20,13 @@
         </tr>
 
         <tr>
-            <td>添加第 <strong>{{ contract.invoiceItem | length +1 }}</strong> 张发票</td>
+            {% set counter = 1 %}
+            {% for myInvoice in contract.invoiceItem if myInvoice.userId == app.user.id %}
+
+                {% set counter = counter + 1 %}
+
+            {% endfor %}
+            <td>添加第 <strong>{{ counter }}</strong> 张发票</td>
             <td><a class="btn btn-lg btn-success" href="{{ url('add_item_for_invoice' , {'masterId':contract.id}) }}">添加</a></td>
         </tr>
     </table>
