--- a/src/Web/BackendBundle/Resources/views/Invoice/add/index_content.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Invoice/add/index_content.html.twig
@@ -1,3 +1,14 @@
+{{ form_start(form) }}
 
 
-{{ form(form) }}
+    <div class="form-group">
+        <div class="col-md-4">{{ form_label(form.file) }}</div>
+        <div class="col-md-8">{{ form_widget(form.file) }}</div>
+    </div>
+
+
+    <div class="form-group">
+        {{ form_widget(form.submit , {'attr' : {'class':'btn btn-success btn-block btn-lg'}}) }}
+    </div>
+
+{{ form_end(form) }}
