--- a/src/Web/BackendBundle/Resources/views/Invoice/create/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Invoice/create/index.html.twig
@@ -25,9 +25,9 @@
             {% include "WebBackendBundle:Invoice:create/index_content.html.twig" %}
         </div>
 
-        <div class="row"><div class="col-md-12">
+        <div class="row hidden-sm"><div class="col-md-12">
         <div class="alert alert-success">
-            <h4><i class="fa fa-check"></i> Invoices that is already handled</h4>
+            <h4><i class="fa fa-check"></i> {{ 'backend.invoice.finished' | trans | raw }}</h4>
         </div>
         <div class="block full hidden-sm">
 
@@ -56,7 +56,7 @@
 
     <div class="col-md-6">
         <div class="alert alert-info">
-            <h4><i class="fa fa-plus"></i> Invoices that is in process</h4>
+            <h4><i class="fa fa-plus"></i> {{ 'backend.invoice.in_process' | trans | raw }}</h4>
         </div>
 
         {% for invoice in contract.invoiceItem if invoice.userId == app.user.id %}
@@ -66,7 +66,7 @@
             <div class="block">
                     <h5>
                         <span class="{{ invoice.status.flag }}">{{ invoice.status }}</span>
-                     Invoice ID:  <span class="label label-primary">{{ invoice.signals }}</span> <a href="{{ url('finish_invoice_info' , {'invoiceId' : invoice.id}) }}">Edit</a>
+                     {{ 'backend.invoice.id' | trans | raw }}:  <span class="label label-primary">{{ invoice.signals }}</span> <a href="{{ url('finish_invoice_info' , {'invoiceId' : invoice.id}) }}">Edit</a>
                     </h5>
 
                     <div class="row">
@@ -82,7 +82,12 @@
                 <table class="table">
                     <tr>
                         <td>
-                            <strong>{% if invoice.invoiceType %}{{ invoice.invoiceType }} 's Expense{% endif %}<strong>
+                            <strong>
+                                {% if invoice.invoiceType %}
+
+                                    {{ 'backend.invoice.type' | trans({ '%type%' : invoice.invoiceType }) }}
+                                {% endif %}
+                            </strong>
                         </td>
                         <td>
                             {% if invoice.totalNumber %}{{ invoice.totalNumber }}{% endif %}
@@ -90,7 +95,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Description</strong>
+                            <strong>{{ 'backend.invoice.description' | trans | raw }}</strong>
                         </td>
                         <td>
                             {% if invoice.etc %}{{ invoice.etc | striptags | truncate(20) }}{% endif %}
@@ -98,7 +103,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Invoice Date</strong>
+                            <strong>{{ 'backend.invoice.invoice_happen_date' | trans | raw }}</strong>
                         </td>
                         <td>
                             {% if invoice.invoiceDate %}{{ invoice.invoiceDate | date('Y-m-d')}}{% endif %}
