--- a/src/Web/BackendBundle/Resources/views/Invoice/finish/index.html.twig
+++ b/src/Web/BackendBundle/Resources/views/Invoice/finish/index.html.twig
@@ -19,7 +19,7 @@
         </ul>
         <br/>
 
-        <h2>Invoice ID: <strong>{{ signal }}</strong></h2>
+        <h2>{{ 'backend.invoice.id' | trans | raw }}: <strong>{{ signal }}</strong></h2>
     </div>
 
 
@@ -29,7 +29,7 @@
             <div class="block full">
 
                 <div class="block-title">
-                    <h2><strong>Add</strong> More Photos Of Invoices</h2>
+                    <h2>{{ 'backend.invoice.add_more_snapshot' | trans | raw }}</h2>
                 </div>
 
                 {{ form(uploadForm) }}
@@ -44,7 +44,7 @@
                         </a>
 
                         <p>
-                            <a href="{{ url('delete_invoice_photo' , {'invoiceId' : item.id , 'attachmentId' : attachment.id}) }}">Delete</a>
+                            <a href="{{ url('delete_invoice_photo' , {'invoiceId' : item.id , 'attachmentId' : attachment.id}) }}">{{ 'backend.invoice.delete' | trans | raw }}</a>
                         </p>
                         <hr />
                     </div>
@@ -58,11 +58,9 @@
 
         <div class="col-md-8">
             <div class="block full">
-
                 <div class="block-title">
-                    <h2><strong>Finish</strong> Invoice's Information</h2>
+                    <h2>{{ 'backend.invoice.fill_the_invoice_info' | trans | raw }}</h2>
                 </div>
-
                 {% include "WebBackendBundle:Invoice:finish/index_content.html.twig" %}
             </div>
         </div>
